--- a/README.textile
+++ b/README.textile
@@ -34,6 +34,10 @@ The above will initialize the autoloader as long as its installed, regardless of
 
 h2. Changelog
 
+h3. Version 0.3.1 - 2014/03/28
+
+* Updated source comment.
+
 h3. Version 0.3.0 - 2014/03/24
 
 * Removed: "xrstf/composer-php52":https://packagist.org/packages/xrstf/composer-php52 support.
