--- a/README.textile
+++ b/README.textile
@@ -36,6 +36,10 @@ The above will initialize the autoloader as long as its installed, regardless of
 
 h2. Changelog
 
+h3. Version 0.3.2 - 2019/03/24
+
+* No actual changes, just quality of life.
+
 h3. Version 0.3.1 - 2014/03/28
 
 * Updated source comment.
